# Brick-Breaker-game

./: CMakeLists.txt  README.md  main.cpp  menu.cpp  menu.h
Break bricker (THE GAME)/: BrickBreaker.cbp  CMakeCache.txt  Makefile  cmake_install.cmake
